--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,19 @@
-*.class
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.ear
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+/.classpath
+/.settings
+/.project
+/.jruby
+*.iml
+*.ipr
+*.iws
+/target
+.DS_Store*
+.idea
+.project
+.classpath
+.settings
+.mule
+transaction.log
+target/
+muleLicenseKey.lic
+*dependency-reduced-pom.xml
+.factorypath
