Add more content to tutorial

--- a/tutorial/pom.xml
+++ b/tutorial/pom.xml
@@ -1,39 +1,45 @@
 <?xml version="1.0"?>
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+    <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>org.mule.tools.devkit.store</groupId>
+        <artifactId>mule-store-service</artifactId>
+        <version>1.0.0-SNAPSHOT</version>
+    </parent>
     <groupId>org.mule.tools.devkit.store</groupId>
-    <artifactId>mule-store-service</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
-  </parent>
-  <groupId>org.mule.tools.devkit.store</groupId>
-  <artifactId>tutorial</artifactId>
-  <version>1.0-SNAPSHOT</version>
-  <name>tutorial</name>
-  <properties>
-    <version.asciidoctor>1.5.0</version.asciidoctor>
-  </properties>
-<build>
-  <plugins>
-     <plugin>
-          <groupId>org.asciidoctor</groupId>
-          <artifactId>asciidoctor-maven-plugin</artifactId>
-          <version>${version.asciidoctor}</version>
-          <executions>
-              <execution>
-                 <id>output-html</id>
-                 <phase>generate-resources</phase>
-                 <goals>
-                     <goal>process-asciidoc</goal>
-                 </goals>
-                 <configuration>
-                     <backend>html</backend>
-                     <doctype>book</doctype>                   
-                 </configuration>
-               </execution>
-           </executions>
-      </plugin>
-  </plugins>
-</build>
+    <artifactId>tutorial</artifactId>
+    <version>1.0-SNAPSHOT</version>
+    <name>tutorial</name>
+    <properties>
+        <version.asciidoctor>1.5.0</version.asciidoctor>
+    </properties>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.asciidoctor</groupId>
+                <artifactId>asciidoctor-maven-plugin</artifactId>
+                <version>${version.asciidoctor}</version>
+                <executions>
+                    <execution>
+                        <id>output-html</id>
+                        <phase>generate-resources</phase>
+                        <goals>
+                            <goal>process-asciidoc</goal>
+                        </goals>
+                        <configuration>
+                            <backend>html</backend>
+                            <doctype>book</doctype>
+                            <sourceHighlighter>highlightjs</sourceHighlighter>
+                            <attributes>
+                                <linkcss>true</linkcss>
+                                <icons>font</icons>
+                                <docinfo1/>
+                            </attributes>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
