--- a/model/pom.xml
+++ b/model/pom.xml
@@ -2,15 +2,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>mule-cookbook</artifactId>
-        <groupId>org.mule.tools.devkit.cookbook</groupId>
+        <groupId>com.cookbook.tutorial</groupId>
         <version>1.0.0-SNAPSHOT</version>
+        <relativePath>../mule-cookbook-parent/pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
     <artifactId>model</artifactId>
     <packaging>jar</packaging>
-
-    
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
