--- a/mule-store-server/pom.xml
+++ b/mule-store-server/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>org.mule.tools.devkit.cookbook</groupId>
+    <groupId>com.cookbook.tutorial</groupId>
     <version>1.0.0-SNAPSHOT</version>
     <artifactId>mule-cookbook-server</artifactId>
     <packaging>mule</packaging>
@@ -10,7 +10,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <mule.version>3.6.0-RC1</mule.version>
+        <mule.version>3.6.0</mule.version>
         <mule.tools.version>1.0-SNAPSHOT</mule.tools.version>
     </properties>
 
@@ -172,7 +172,7 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>org.mule.tools.devkit.store</groupId>
+            <groupId>com.cookbook.tutorial</groupId>
             <artifactId>soap-server</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
