--- a/soap-server/pom.xml
+++ b/soap-server/pom.xml
@@ -2,8 +2,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>mule-cookbook</artifactId>
-        <groupId>org.mule.tools.devkit.cookbook</groupId>
+        <groupId>com.cookbook.tutorial</groupId>
         <version>1.0.0-SNAPSHOT</version>
+        <relativePath>../mule-cookbook-parent/pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -82,9 +83,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.mule.tools.devkit.store</groupId>
-            <artifactId>webservice</artifactId>
-            <version>${project.version}</version>
+            <groupId>org.apache.cxf</groupId>
+            <artifactId>cxf-rt-frontend-jaxws</artifactId>
+            <version>${cxf.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.cxf</groupId>
