--- a/webservice/pom.xml
+++ b/webservice/pom.xml
@@ -19,9 +19,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <parent>
-        <groupId>org.mule.tools.devkit.cookbook</groupId>
+        <groupId>com.cookbook.tutorial</groupId>
         <artifactId>mule-cookbook</artifactId>
         <version>1.0.0-SNAPSHOT</version>
+        <relativePath>../mule-cookbook-parent/pom.xml</relativePath>
     </parent>
     <version>1.0.0-SNAPSHOT</version>
     <modelVersion>4.0.0</modelVersion>
@@ -29,7 +30,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.mule.tools.devkit.cookbook</groupId>
+            <groupId>com.cookbook.tutorial</groupId>
             <artifactId>model</artifactId>
             <version>${project.version}</version>
         </dependency>
@@ -58,9 +59,9 @@
                 <executions>
                     <execution>
                         <id>generate-test-sources</id>
-                        <phase>generate-test-sources</phase>
+                        <phase>generate-sources</phase>
                         <configuration>
-                            <className>org.mule.tools.devkit.cookbook.service.IMuleCookBookService</className>
+                            <className>com.cookbook.tutorial.service.IMuleCookBookService</className>
                             <genWsdl>true</genWsdl>
                             <verbose>true</verbose>
                         </configuration>
