--- a/tutorial/pom.xml
+++ b/tutorial/pom.xml
@@ -3,7 +3,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.mule.tools.devkit.cookbook</groupId>
+        <groupId>com.cookbook.tutorial</groupId>
         <artifactId>mule-cookbook-service</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
@@ -57,6 +57,7 @@
                                 <linkcss>true</linkcss>
                                 <icons>font</icons>
                                 <docinfo1/>
+                                <stylesheet>${basedir}/src/main/asciidoc/css/mule.css</stylesheet>
                             </attributes>
                         </configuration>
                     </execution>
