--- a/sdk-client/pom.xml
+++ b/sdk-client/pom.xml
@@ -52,9 +52,10 @@
                                     <wsdl>${basedir}/src/main/resources/wsdl/IMuleCookBookService.wsdl</wsdl>
                                     <autoNameResolution>true</autoNameResolution>
                                     <extraargs>
-                                        <extraarg>-client</extraarg>
                                         <extraarg>-xjc-Xbg</extraarg>
                                         <extraarg>-xjc-Xcollection-setter-injector</extraarg>
+                                        <extraarg>-b</extraarg>
+                                        <extraarg>${basedir}/src/main/resources/wsdl/binding.xml</extraarg>
                                     </extraargs>
                                 </wsdlOption>
                             </wsdlOptions>
