--- a/soap-server/pom.xml
+++ b/soap-server/pom.xml
@@ -10,7 +10,6 @@
 
     <artifactId>soap-server</artifactId>
     <packaging>jar</packaging>
-
     
     <build>
         <plugins>
@@ -54,6 +53,8 @@
                                     <extraargs>
                                         <extraarg>-xjc-Xbg</extraarg>
                                         <extraarg>-xjc-Xcollection-setter-injector</extraarg>
+                                        <extraarg>-b</extraarg>
+                                        <extraarg>${basedir}/src/main/resources/wsdl/binding.xml</extraarg>
                                     </extraargs>
                                 </wsdlOption>
                             </wsdlOptions>
@@ -64,13 +65,13 @@
                     </execution>
                 </executions>
                 <dependencies>
-                    <!-- 					Boolean getters -->
+                    <!-- Boolean getters -->
                     <dependency>
                         <groupId>org.apache.cxf.xjcplugins</groupId>
                         <artifactId>cxf-xjc-boolean</artifactId>
                         <version>2.6.0</version>
                     </dependency>
-                    <!-- 					Collection Setters -->
+                    <!-- Collection Setters -->
                     <dependency>
                         <groupId>net.java.dev.vcc.thirdparty</groupId>
                         <artifactId>collection-setter-injector</artifactId>
@@ -89,22 +90,54 @@
         </dependency>
         <dependency>
             <groupId>org.apache.cxf</groupId>
-            <artifactId>cxf-rt-frontend-jaxws</artifactId>
+            <artifactId>cxf-rt-databinding-jaxb</artifactId>
             <version>${cxf.version}</version>
-            <scope>provided</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.sun.xml.bind</groupId>
+                    <artifactId>jaxb-impl</artifactId>
+                </exclusion>
+                <!-- We use javax.activation -->
+                <exclusion>
+                    <groupId>org.apache.geronimo.specs</groupId>
+                    <artifactId>geronimo-activation_1.1_spec</artifactId>
+                </exclusion>
+                <!-- We use javax.mail -->
+                <exclusion>
+                    <groupId>org.apache.geronimo.specs</groupId>
+                    <artifactId>geronimo-javamail_1.4_spec</artifactId>
+                </exclusion>
+                <!-- We use stax-api -->
+                <exclusion>
+                    <groupId>org.apache.geronimo.specs</groupId>
+                    <artifactId>geronimo-stax-api_1.0_spec</artifactId>
+                </exclusion>
+                <!-- We use javax.xml.ws:jaxws-api -->
+                <exclusion>
+                    <groupId>org.apache.geronimo.specs</groupId>
+                    <artifactId>geronimo-jaxws_2.1_spec</artifactId>
+                </exclusion>
+                <!-- We use slf4j -->
+                <exclusion>
+                    <groupId>commons-logging</groupId>
+                    <artifactId>commons-logging</artifactId>
+                </exclusion>
+                <!--                 <exclusion> -->
+                <!--                     <groupId>com.sun.xml.bind</groupId> -->
+                <!--                     <artifactId>jaxb-impl</artifactId> -->
+                <!--                 </exclusion> -->
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.apache.cxf</groupId>
-            <artifactId>cxf-rt-transports-http</artifactId>
+            <artifactId>cxf-rt-frontend-jaxws</artifactId>
             <version>${cxf.version}</version>
-            <scope>provided</scope>
         </dependency>
         <!-- Jetty is needed if you're are not using the CXFServlet -->
         <dependency>
             <groupId>org.apache.cxf</groupId>
             <artifactId>cxf-rt-transports-http-jetty</artifactId>
             <version>${cxf.version}</version>
-            <scope>provided</scope>
         </dependency>
     </dependencies>
 </project>
