Add Connector to the tutorial repo

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>mule-cookbook-server</module>
         <module>sdk-client</module>
         <module>rest-server</module>
+        <module>cook-book-connector</module>
         <module>tutorial</module>
     </modules>
 
