--- a/pom.xml
+++ b/pom.xml
@@ -12,10 +12,32 @@
         <module>model</module>
         <module>webservice</module>
         <module>soap-server</module>
-        <module>mule-cookbook-server</module>
+        <!--<module>mule-cookbook-server</module>-->
         <module>sdk-client</module>
         <module>rest-server</module>
         <module>cookbook-connector</module>
     </modules>
 
+    <scm>
+        <connection>scm:git:git://github.com:mulesoft/mule-cookbook.git
+        </connection>
+        <developerConnection>
+            scm:git:git@github.com:mulesoft/mule-cookbook.git
+        </developerConnection>
+        <url>http://github.com/mulesoft/mule-cookbook</url>
+    </scm>
+
+    <distributionManagement>
+        <repository>
+            <id>mulesoft-releases</id>
+            <name>MuleSoft Release Repository</name>
+            <url>http://repository-master.mulesoft.org/releases/</url>
+        </repository>
+        <snapshotRepository>
+            <id>mulesoft-snapshots</id>
+            <name>MuleSoft Snapshot Repository</name>
+            <url>http://repository-master.mulesoft.org/snapshots</url>
+            <uniqueVersion>false</uniqueVersion>
+        </snapshotRepository>
+    </distributionManagement>
 </project>
