CLDCONNECT-2453: Removed Connector from Service project

--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.cookbook.tutorial</groupId>
@@ -15,17 +16,8 @@
         <module>mule-cookbook-server</module>
         <module>sdk-client</module>
         <module>rest-server</module>
-        <module>cookbook-connector</module>
     </modules>
 
-    <scm>
-        <connection>scm:git:git://github.com:mulesoft/mule-cookbook.git
-        </connection>
-        <developerConnection>
-            scm:git:git@github.com:mulesoft/mule-cookbook.git
-        </developerConnection>
-        <url>http://github.com/mulesoft/mule-cookbook</url>
-    </scm>
 
     <distributionManagement>
         <repository>
@@ -40,4 +32,11 @@
             <uniqueVersion>false</uniqueVersion>
         </snapshotRepository>
     </distributionManagement>
+
+    <scm>
+        <connection>scm:git:git://github.com:mulesoft/mule-cookbook.git</connection>
+        <developerConnection>scm:git:git@github.com:mulesoft/mule-cookbook.git</developerConnection>
+        <url>http://github.com/mulesoft/mule-cookbook</url>
+    </scm>
+
 </project>
