--- a/model/pom.xml
+++ b/model/pom.xml
@@ -1,14 +1,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <parent>
-        <artifactId>mule-cookbook</artifactId>
-        <groupId>com.cookbook.tutorial</groupId>
-        <version>1.0.0-SNAPSHOT</version>
-        <relativePath>../mule-cookbook-parent/pom.xml</relativePath>
-    </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>model</artifactId>
     <packaging>jar</packaging>
+
+    <parent>
+        <groupId>org.mule.modules</groupId>
+        <artifactId>mule-cookbook</artifactId>
+        <version>1.0.0-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
+    </parent>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
