--- a/mule-cookbook-server/pom.xml
+++ b/mule-cookbook-server/pom.xml
@@ -3,7 +3,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.mycompany</groupId>
+	<groupId>org.mule.cookbook.server</groupId>
 	<artifactId>mule-soap-server</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>mule</packaging>
@@ -19,6 +19,14 @@
 
 	<build>
 		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-deploy-plugin</artifactId>
+				<version>2.8.2</version>
+				<configuration>
+					<skip>true</skip>
+				</configuration>
+			</plugin>
 			<plugin>
 				<groupId>org.mule.tools.maven</groupId>
 				<artifactId>mule-app-maven-plugin</artifactId>
@@ -125,12 +133,12 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>com.cookbook.tutorial</groupId>
+			<groupId>org.mule.modules</groupId>
 			<artifactId>soap-server</artifactId>
 			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
-			<groupId>com.cookbook.tutorial</groupId>
+			<groupId>org.mule.modules</groupId>
 			<artifactId>rest-server</artifactId>
 			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
