--- a/mule-cookbook-server/pom.xml
+++ b/mule-cookbook-server/pom.xml
@@ -5,14 +5,14 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.mule.cookbook.server</groupId>
 	<artifactId>mule-soap-server</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<packaging>mule</packaging>
 	<name>Mule Cookbook Server Application</name>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-
+		<mule.cookbook.version>1.0.0</mule.cookbook.version>
 		<mule.version>3.7.0</mule.version>
 		<mule.tools.version>1.1</mule.tools.version>
 	</properties>
@@ -135,12 +135,12 @@
 		<dependency>
 			<groupId>org.mule.modules</groupId>
 			<artifactId>soap-server</artifactId>
-			<version>1.0.0-SNAPSHOT</version>
+			<version>${mule.cookbook.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.mule.modules</groupId>
 			<artifactId>rest-server</artifactId>
-			<version>1.0.0-SNAPSHOT</version>
+			<version>${mule.cookbook.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.mule.modules</groupId>
