--- a/rest-server/pom.xml
+++ b/rest-server/pom.xml
@@ -7,13 +7,14 @@
     <parent>
         <groupId>org.mule.modules</groupId>
         <artifactId>mule-cookbook</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>1.0.0</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.url>${basedir}/site/apidocs/index.html</project.url>
+        <mule.cookbook.version>1.0.0</mule.cookbook.version>
     </properties>
 
     <build>
@@ -139,7 +140,7 @@
         <dependency>
             <groupId>org.mule.modules</groupId>
             <artifactId>soap-server</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>${mule.cookbook.version}</version>
         </dependency>
     </dependencies>
 </project>
